# finitefields

./: Cargo.toml  README.md  build.rs
src/: lib.rs  mul_mod.c  primes.rs
