[package]
name = "finitefields"
version = "0.1.0"
authors = ["apelloni <apelloni@nikhef.nl>"]
build = "build.rs"
description = "Perform algebraic operations between integers over a finite field"
repository = "https://github.com/apelloni/finitefields"
readme = "README.md"
license = "GPL-3.0"
keywords = ["modular", "arithmetic"]

[lib]
name = "finitefields"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.91"

[build-dependencies]
cc = "^1.0"
